--- a/angular.json
+++ b/angular.json
@@ -25,6 +25,7 @@
               "src/assets"
             ],
             "styles": [
+              "projects/ngx-combobox/src/assets/css/ngx-combobox.css",
               "src/styles.css"
             ],
             "scripts": []
@@ -90,6 +91,39 @@
               "src/styles.css"
             ],
             "scripts": []
+          }
+        }
+      }
+    },
+    "ngx-combobox": {
+      "projectType": "library",
+      "root": "projects/ngx-combobox",
+      "sourceRoot": "projects/ngx-combobox/src",
+      "prefix": "ngx",
+      "architect": {
+        "build": {
+          "builder": "@angular-devkit/build-angular:ng-packagr",
+          "options": {
+            "project": "projects/ngx-combobox/ng-package.json"
+          },
+          "configurations": {
+            "production": {
+              "tsConfig": "projects/ngx-combobox/tsconfig.lib.prod.json"
+            },
+            "development": {
+              "tsConfig": "projects/ngx-combobox/tsconfig.lib.json"
+            }
+          },
+          "defaultConfiguration": "production"
+        },
+        "test": {
+          "builder": "@angular-devkit/build-angular:karma",
+          "options": {
+            "tsConfig": "projects/ngx-combobox/tsconfig.spec.json",
+            "polyfills": [
+              "zone.js",
+              "zone.js/testing"
+            ]
           }
         }
       }
